# sysroot-wrappers

./: .gitignore  CODEOWNERS  Makefile.am  README.md  config.h.in  configure.ac
src/: Makefile.am  args.c  cc_wrap.c  common.h  execute.c  sysroot-config.sh  util.c
